gcc/testsuite/gfortran.dg/assumed_size_2.f90
! { dg-do compile }
subroutine foo(a)
  dimension  a(*,*) ! { dg-error "Bad specification for assumed size array" }
end
